--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <p>Lead Game Designer
 <a href="https://www.seek.com.au/job/39413513?type=standard&searchrequesttoken=8ce85d60-
 67a7-4e30-bc33-7a4419043ef6">Job Advertisement</a> <br>
-<img src="C:\Users\Jayden\Desktop\University\Introduction to IT\Assignment01\img\LeadGameDesign01.png" width="300" height="500">
-<img src="C:\Users\Jayden\Desktop\University\Introduction to IT\Assignment01\img\LeadGameDesign02.png" width="300" height="500"></p>
+<img src="LeadGameDesign01.png" height="300" width="500" /></p>
+<img src="LeadGameDesign02.png" height="300" width="500" /></p>
 <h3>Position Description</h3>
 <p>This position is one of leadership so it would be my job to inspire, help
   and direct my team to create a groundbreaking experience for the player.
@@ -110,7 +110,7 @@ Learning Style Test <br>
 Visual Learner <br>
 
 Big Five Personality Test <br>
-<img src="C:\Users\Jayden\Desktop\University\Introduction to IT\Assignment01\img\BigFivePersonalityResult.png" width="500" height="300"> <br>
+<img src="BigFivePersonalityResult.png" width="500" height="300"> <br>
 
 The results of these tests seem fairly consistent and I would certainly agree
 with the outcomes. I feel the result prove that I am a level headed person, can
